composite key sample